# heare-memory

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: IDEAS.md  IMPLEMENTATION_PLAN.md  PROPOSAL.md  TESTING_SUMMARY.md
memory/concurrent/: file_001.md  file_002.md
memory/crud/: test-cycle.md
src/heare_memory/: __init__.py  config.py  dependencies.py  exceptions.py  external_tools.py  file_manager.py  git_manager.py  main.py  path_utils.py  search_backend.py  startup.py  state.py
src/heare_memory/middleware/: __init__.py  auth.py  error_handler.py
src/heare_memory/models/: __init__.py  auth.py  errors.py  file_metadata.py  git.py  memory.py  requests.py  responses.py  search.py
src/heare_memory/routers/: __init__.py  health.py  memory.py  schema.py
src/heare_memory/services/: __init__.py  memory_service.py
tests/: __init__.py  conftest.py  test_auth_middleware.py  test_auth_utils.py  test_crud_operations.py  test_custom_exceptions.py  test_error_handling.py  test_error_scenarios.py  test_file_manager.py  test_git_manager.py  test_list_operations.py  test_main.py  test_memory_delete.py  test_memory_get.py  test_memory_put.py  test_models.py  test_path_utils.py  test_search_backend.py  test_search_endpoint.py  test_search_endpoint_simple.py  test_startup.py
